# threat-forge

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.ci  NOTICE  README.md  SECURITY.md  biome.json  compose.yml  handoff-2026-07-23-1706.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.worker.json  vercel.json  vite.config.ts  vitest.config.ts  wrangler.jsonc  wrangler.toml
.claude/: settings.json
.devcontainer/: devcontainer.json  on-create.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
docs/: file-format.md  implementation-plan.md  mcp-server.md  next-up.md  project-document.md  todo-archive-001.md  todo-archive-004.md  todo-archive-2027-02-27.md  todo.md
e2e/: ai-chat.spec.ts  ai-tool-loop.spec.ts  app-launch.spec.ts  browser-restore.spec.ts  fixtures.ts  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.signing.conf.json  trusted-signing-metadata.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  menu.rs
src-tauri/src/ai/: keychain.rs  mod.rs  prompt.rs  providers.rs  types.rs
src-tauri/src/commands/: ai_commands.rs  app_commands.rs  file_commands.rs  import_commands.rs  mod.rs  stride_commands.rs  update_commands.rs
src-tauri/src/file_io/: fixtures_test.rs  mod.rs  reader.rs  writer.rs
src-tauri/src/importers/: mod.rs  tm7.rs
src-tauri/src/importers/fixtures/: tmt-4.3-sample.expected.yaml  tmt-4.3-sample.tm7
src-tauri/src/mcp/: server.rs
src-tauri/src/mcp/fixtures/: tool-surface.json
src-tauri/src/models/: mod.rs  threat_model.rs
src-tauri/src/stride/: mod.rs
src-tauri/tests/: mcp_stdio.rs  prompt_ownership.rs
(+448 files in other folders)
