[package]
name = "threat-forge"
version = "0.1.0"
description = "AI-enhanced threat modeling desktop application"
authors = ["Exit Zero Labs <admin@exitzerolabs.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "threat_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
